--- a/index.html
+++ b/index.html
@@ -46,8 +46,25 @@
 			-->
 					<img src="imgs/desktop/madamecurie_9.jpg" style="display:none; position: absolute; left: 46%;top: 5%;width: 15%;height: auto; border: 5px solid black;">
 					<img src="imgs/desktop/img-madamecurie-1.jpg" style="display:none;  position: absolute; left: 51%;top: 12%;width: 27%;height: auto; z-index:-1000">
-					<img src="imgs/desktop/MadameCurie_8_2.jpg" style="display:none;  position: absolute; left: 61.3%;top: 30%;width: 15%;height: auto;border: 5px solid black;">
+					<img src="imgs/desktop/MadameCurie_8_2.jpg" style="display:none;  position: absolute; left: 61.3%;top: 30%;width: 10%;height: auto;border: 5px solid black;">
 					<img src="imgs/desktop/vs-img-3.jpg" style="display:none;  position: absolute; left: 51%;top: 43.6%;width: 27%;height: auto; z-index:-1000">
+					<img src="imgs/desktop/1903-06-08.jpg" style="display:none;  position: absolute; left: 61.7%;top: 50%;width: 10%;height: auto;border: 5px solid black;">
+					<img src="imgs/desktop/FrancoiseBalibar_31.jpg" style="display:none;  position: absolute; left: 39%;top: 76.5%;width: 25%;height: auto; z-index:-1000">
+					<img src="imgs/desktop/1903-12-11.jpg" style="display:none;  position: absolute; left: 55.55%;top: 83%;width: 10%;height: auto;border: 5px solid black; ">
+					<img src="imgs/desktop/1905-07-04.jpg" style="display:none;  position: absolute; left: 30.55%;top: 78%;width: 10%;height: auto;border: 5px solid black; ">
+					<img src="imgs/desktop/19596_1_l.jpg" style="display:none;  position: absolute; left: 50%;top: 10%;width:50%;height: auto; z-index:-1000">
+					<img src="imgs/desktop/1906-04-20.jpg" style="display:none;  position: absolute; left: 82%;top: 17%;width: 10%;height: auto;border: 5px solid black;">
+					<img src="imgs/desktop/1906-04-22.jpg" style="display:none;  position: absolute; left: 64.5%;top: 15%;width: 10%;height: auto;border: 5px solid black; ">
+					<img src="imgs/desktop/1911-11-28_1.jpg" style="display:none;  position: absolute; left: 32%;top: 36.5%;width: 9%;height: auto;border: 5px solid black; ">
+					<img src="imgs/desktop/1911-11-25.jpg" style="display:none;  position: absolute; left: 19%;top: 42%;width: 9%;height: auto;border: 5px solid black; ">
+					<img src="imgs/desktop/vp-img-2.jpg" style="display:none;  position: absolute; left: 10%;top: 30%;width:28%;height: auto; z-index:-1000">
+					<img src="imgs/desktop/vs-img-7.jpg" style="display:none;  position: absolute; left: 35.1%;top: 19%;width:20%;height: auto; z-index:-1000">
+					<img src="imgs/desktop/1911-12-11.jpg" style="display:none;  position: absolute; left: 25%;top: 11.9%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/FrancoiseBalibar_17.jpg" style="display:none;  position: absolute; left: 55.2%;top: 30%;width:9.9%;height: auto;z-index:-1000;">
+					<img src="imgs/desktop/1913_09_15.jpg" style="display:none;  position: absolute; left: 66.8%;top: 48.5%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/Cosset_4.jpg" style="display:none;  position: absolute; left: 70.2%;top: 65%;width:35%;height: auto;z-index:-1000;">
+
+
 
 
 				</div>
