--- a/index.html
+++ b/index.html
@@ -61,10 +61,15 @@
 					<img src="imgs/desktop/vs-img-7.jpg" style="display:none;  position: absolute; left: 35.1%;top: 19%;width:20%;height: auto; z-index:-1000">
 					<img src="imgs/desktop/1911-12-11.jpg" style="display:none;  position: absolute; left: 25%;top: 11.9%;width:10%;height: auto;auto;border: 5px solid black;">
 					<img src="imgs/desktop/FrancoiseBalibar_17.jpg" style="display:none;  position: absolute; left: 55.2%;top: 30%;width:9.9%;height: auto;z-index:-1000;">
-					<img src="imgs/desktop/1913_09_15.jpg" style="display:none;  position: absolute; left: 66.8%;top: 48.5%;width:10%;height: auto;auto;border: 5px solid black;">
-					<img src="imgs/desktop/Cosset_4.jpg" style="display:none;  position: absolute; left: 70.2%;top: 65%;width:35%;height: auto;z-index:-1000;">
-
-
+					<img src="imgs/desktop/1913_09_15.jpg" style="display:none; position: absolute; left: 66.8%;top: 48.5%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/Cosset_4.jpg" style="display:none;  position: absolute; left: 58.2%;top: 65%; width:40%;height: auto;z-index:-1000;">
+					<img src="imgs/desktop/1921-02-27_1.jpg" style="display:none; position: absolute; left: 81%;top: 70.5%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/1929-11-01.jpg" style="display:none; position: absolute; left: 64%;top: 81.5%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/FrancoiseBalibar_9.jpg" style="display:none;  position: absolute; left: 58.2%;top: 55%; width:30%;height: auto;z-index:-1000;">
+					<img src="imgs/desktop/1921-03-07.jpg" style="display:none; position: absolute; left: 60%;top: 59.3%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/vs-img-6.jpg" style="display:none;  position: absolute; left: 67.2%;top: 29%; width:10%;height: auto;z-index:-1000;">
+					<img src="imgs/desktop/1921-03-25.jpg" style="display:none; position: absolute; left: 57.05%;top: 28.9%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/vp-img-6.jpg" style="display:none;  position: absolute; left: 77.4%;top: 35.5%; width:20%;height: auto;z-index:-1000;">
 
 
 				</div>
