--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 					<img src="imgs/desktop/vs-img-3.jpg" style="display:none;  position: absolute; left: 51%;top: 43.6%;width: 27%;height: auto; z-index:-1000">
 					<img src="imgs/desktop/1903-06-08.jpg" style="display:none;  position: absolute; left: 61.7%;top: 50%;width: 10%;height: auto;border: 5px solid black;">
 					<img src="imgs/desktop/FrancoiseBalibar_31.jpg" style="display:none;  position: absolute; left: 39%;top: 76.5%;width: 25%;height: auto; z-index:-1000">
-					<img src="imgs/desktop/1903-12-11.jpg" style="display:none;  position: absolute; left: 55.55%;top: 83%;width: 10%;height: auto;border: 5px solid black; ">
-					<img src="imgs/desktop/1905-07-04.jpg" style="display:none;  position: absolute; left: 30.55%;top: 78%;width: 10%;height: auto;border: 5px solid black; ">
+					<img src="imgs/desktop/1903-12-11.jpg" style="display:none;  position: absolute; left: 55.55%;top: 85%;width: 10%;height: auto;border: 5px solid black; ">
+					<img src="imgs/desktop/1905-07-04.jpg" style="display:none;  position: absolute; left: 34.55%;top: 79%;width: 10%;height: auto;border: 5px solid black; ">
 					<img src="imgs/desktop/19596_1_l.jpg" style="display:none;  position: absolute; left: 50%;top: 10%;width:50%;height: auto; z-index:-1000">
 					<img src="imgs/desktop/1906-04-20.jpg" style="display:none;  position: absolute; left: 82%;top: 17%;width: 10%;height: auto;border: 5px solid black;">
 					<img src="imgs/desktop/1906-04-22.jpg" style="display:none;  position: absolute; left: 64.5%;top: 15%;width: 10%;height: auto;border: 5px solid black; ">
@@ -69,7 +69,21 @@
 					<img src="imgs/desktop/1921-03-07.jpg" style="display:none; position: absolute; left: 60%;top: 59.3%;width:10%;height: auto;auto;border: 5px solid black;">
 					<img src="imgs/desktop/vs-img-6.jpg" style="display:none;  position: absolute; left: 67.2%;top: 29%; width:10%;height: auto;z-index:-1000;">
 					<img src="imgs/desktop/1921-03-25.jpg" style="display:none; position: absolute; left: 57.05%;top: 28.9%;width:10%;height: auto;auto;border: 5px solid black;">
-					<img src="imgs/desktop/vp-img-6.jpg" style="display:none;  position: absolute; left: 77.4%;top: 35.5%; width:20%;height: auto;z-index:-1000;">
+					<img src="imgs/desktop/FrancoiseBalibar_23.jpg" style="display:none;  position: absolute; left: 77.4%;top: 35%; width:20%;height: auto;z-index:-1000;">
+					<img src="imgs/desktop/1921-03-10.jpg" style="display:none; position: absolute; left: 22.05%;top: 33.9%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/1921-03-13_2.jpg" style="display:none; position: absolute; left: 2.05%;top: 41.9%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/1921-04-20.jpg" style="display:none; position: absolute; left: 12.05%;top: 37.9%;width:10%;height: auto;auto;border: 5px solid black;">
+					<img src="imgs/desktop/vp-img-8.jpg" style="display:none;  position: absolute; left: 2%;top: 50.5%; width:21%;height: auto;z-index:-1000;">
+					<img src="imgs/desktop/1921-05-21.jpg" style="display:none;  position: absolute; left: 7.05%;top: 57.5%; width:10%;height: auto;border: 5px solid black;">
+					<img src="imgs/desktop/JanineTroterau_7.jpg" style="display:none;  position: absolute; left: 23%;top: 19%; width:26%;height: auto;z-index:-1000;">
+					<img src="imgs/desktop/1934-06-05.jpg" style="display:none;  position: absolute; left: 31%;top: 49.5%; width:10%;height: auto;border: 5px solid black;">
+					<img src="imgs/desktop/1934-07-05_2.jpg" style="display:none;  position: absolute; left: 33.5%;top: 20.5%; width:10%;height: auto;border: 5px solid black;">
+					<img src="imgs/desktop/madamecurie_9.jpg" style="display:none; position: absolute; left: 46%;top: 5%;width: 15%;height: auto; border: 5px solid black;">
+					<img src="imgs/desktop/1932-04-03.jpg" style="display:none; position: absolute; left: 30%;top: 40.5%; width:10%;height: auto;border: 5px solid black;">
+
+
+				
+					
 
 
 				</div>
